2007-03-16  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.13.0 ===

	* NEWS: Updates

2007-03-16  Matthias Clasen  <mclasen@redhat.com>
	
	* glib/glib.symbols:
	* glib/gsequence.h: Add the test function to the header,
	since it is exported.

	* glib/gbase64.c (g_base64_decode): Warn if the input
	is too short.  (#418862, Halton Huo)

Fri Mar 16 11:24:51 2007  Tim Janik  <timj@imendio.com>

	* glib/gscanner.[hc]: reverted premature commit which broke
	GScanner ABI and API, #415323.

2007-03-16  Chris Wilson  <chris@chris-wilson.co.uk>

	* glib/gkeyfile.c: Convert to GSlice and check for redundant
	clears. (#418637)

2007-03-15  Matthias Clasen  <mclasen@redhat.com>

	* glib/gscanner.[hc]: Revert recent changes that break
	existing users of GScanner.

2007-03-15  Matthias Clasen  <mclasen@redhat.com>

	* glib/gscanner.c (g_scanner_get_token_ll): Fix a typo
	in the last commit.  (#415323, Richard Hult)

2007-03-15  Tor Lillqvist  <tml@novell.com>

	* glib/gnulib/Makefile.am (INCLUDES): Add -I$(top_srcdir)/glib so
	that gregex.h finds <glib.h>.

	* glib/update-pcre/Makefille.am-1: Add -DGLIB_COMPILATION so that
	we don't think g_ascii_table is dllimport.

	* glib/pcre/Makefile.am: Corresponding change.

	* glib/update-pcre/notdll.patch: New file. Drop
	dllimport/dllexport magic for the pcre symbols.

	* glib/update-pcre/Makefile.am: Dist it.

	* glib/update-pcre/update.sh: Apply notdll.patch.

	* glib/pcre/pcre.h: Corresponding change.

2007-03-15  Tor Lillqvist  <tml@novell.com>

	* glib/gtypes.h: Add comment to avoid misleading people with the
	large number of digits in G_PI etc. (#404338)

2007-03-15  Tor Lillqvist  <tml@novell.com>

	* config.h.win32.in: Update to match what configure produces.

2007-03-15  Marco Barisione <marco@barisione.org>

	Add GRegex for regular expression matching.  (#50075)

	* configure.in: Handle GRegex compilation.

	* glib/gregex.c:
	* glib/gregex.h: Code for GRegex.

	* glib/Makefile.am: